<resources>
    <string name="app_name">BAC-Home</string>
    <string name="not_connected">You are not connected.\nPlease Connect!</string>
    <string name="connect_breath">Connect to breathalyzer</string>
    <string name="file_browse">Select Voucher CSV file</string>
    <string name="disconnect_breath">Disconnect from breathalyzer</string>
    <string name="tap_screen_to_start">TAP SCREEN\nTO START\n\n\n</string>
    <string name="tap_screen_to_start2">TAP SCREEN\nTO START\n\n</string>
    <string name="settings">SETTINGS</string>
    <string name="countdown_text_starting">Starting in</string>
    <string name="countdown_text_timer">99</string>
    <string name="countdown_text_getready">Get ready</string>
    <string name="blow_text">BLOW INTO DEVICE</string>
    <string name="result_text">RESULT</string>
    <string name="hand_click_desc">Hand Clicking Image</string>
    <string name="phone_number">Phone Number (Digits)</string>
    <string name="GoodConnect">Successfully Connected</string>
    <string name="result_text_filler">Your BAC level is</string>
    <string name="result_text_filler2">CASE OUTPUT</string>
    <string name="SettingsFinishButton">Finish</string>
    <string name="SendSMSButton">Send voucher</string>
    <string name="WaitingText">Waiting…</string>
</resources>
